1
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_unop(astree*, ac3_table*)’:
3ac.cpp:768:69: error: no matching function for call to ‘reg(std::string*, int&)’
  768 |     reg *unary = new reg(astree_stride(current,assignment),reg_count);
      |                                                                     ^
3ac.cpp:93:1: note: candidate: ‘reg::reg(std::string*, std::string*)’ <near match>
   93 | reg::reg(string *typesize_, string *szof){
      | ^~~
3ac.cpp:93:1: note:   conversion of argument 2 would be ill-formed:
3ac.cpp:768:60: error: invalid conversion from ‘int’ to ‘std::string*’ {aka ‘std::__cxx11::basic_string<char>*’} [-fpermissive]
  768 |     reg *unary = new reg(astree_stride(current,assignment),reg_count);
      |                                                            ^~~~~~~~~
      |                                                            |
      |                                                            int
3ac.cpp:81:1: note: candidate: ‘reg::reg(std::string*, std::vector<reg*>*)’ <near match>
   81 | reg::reg(string *fname, vector<reg*> *parameters_){
      | ^~~
3ac.cpp:81:1: note:   conversion of argument 2 would be ill-formed:
3ac.cpp:768:60: error: invalid conversion from ‘int’ to ‘std::vector<reg*>*’ [-fpermissive]
  768 |     reg *unary = new reg(astree_stride(current,assignment),reg_count);
      |                                                            ^~~~~~~~~
      |                                                            |
      |                                                            int
3ac.cpp: In function ‘ac3* p_equals(astree*, ac3_table*)’:
3ac.cpp:1057:66: error: no matching function for call to ‘reg(std::string*, int&)’
 1057 |       ac->t1 = new reg(astree_stride(current,final_val),reg_count);
      |                                                                  ^
3ac.cpp:93:1: note: candidate: ‘reg::reg(std::string*, std::string*)’ <near match>
   93 | reg::reg(string *typesize_, string *szof){
      | ^~~
3ac.cpp:93:1: note:   conversion of argument 2 would be ill-formed:
3ac.cpp:1057:57: error: invalid conversion from ‘int’ to ‘std::string*’ {aka ‘std::__cxx11::basic_string<char>*’} [-fpermissive]
 1057 |       ac->t1 = new reg(astree_stride(current,final_val),reg_count);
      |                                                         ^~~~~~~~~
      |                                                         |
      |                                                         int
3ac.cpp:81:1: note: candidate: ‘reg::reg(std::string*, std::vector<reg*>*)’ <near match>
   81 | reg::reg(string *fname, vector<reg*> *parameters_){
      | ^~~
3ac.cpp:81:1: note:   conversion of argument 2 would be ill-formed:
3ac.cpp:1057:57: error: invalid conversion from ‘int’ to ‘std::vector<reg*>*’ [-fpermissive]
 1057 |       ac->t1 = new reg(astree_stride(current,final_val),reg_count);
      |                                                         ^~~~~~~~~
      |                                                         |
      |                                                         int
make: *** [Makefile:55: 3ac.o] Error 1
